--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,5 +10,6 @@
 <body>
   <header><h1>{{ site.title }}</h1></header>
   <main>{{ content }}</main>
+  <script src="{{ '/assets/js/interactions.js' | relative_url }}"></script>
 </body>
 </html>
