--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@ p, li {
 .main-nav a {
   text-decoration: none;
   color: #000;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 1rem;
 }
 
@@ -91,7 +91,7 @@ h2 {
 }
 
 p, li {
-  font-weight: 100;
+  font-weight: 400;
   font-size: 1rem;
 }
 
@@ -114,11 +114,11 @@ p, li {
 .button, button {
   display: inline-block;
   background: none;
-  border: 1px solid #000;
+  border: .3px solid #000;
   padding: 6px 12px;
   font-family: 'Work Sans', sans-serif;
   font-size: 0.95rem;
-  font-weight: 200;
+  font-weight: 400;
   text-decoration: none;
   cursor: pointer;
   margin: 5px 0;
